--- a/exampleSite/data/en/testimonial.yml
+++ b/exampleSite/data/en/testimonial.yml
@@ -1,6 +1,6 @@
 ################################# Testimonial #########################
 testimonial:
-  enable : false
+  enable : true
   bg_image : images/backgrounds/bg-testimonial.jpg
   bg_image_webp : images/backgrounds/bg-testimonial.webp
   testimonial_item :
