--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -2,7 +2,7 @@
 banner:
   enable : true
   bg_image_webp : "images/backgrounds/hero-area.webp"
-  bg_image : "images/backgrounds/hero-area.jpg"
+  bg_image : "images/backgrounds/hero-area.png"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "Kiran Kokilepersaud"
   content : 
