--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -53,13 +53,7 @@ weight = 1
 #pre = ""
 #url = "https://themefisher.com/"
 #weight = 8
-[Languages.fr]
-contentDir = "content/french"
-copyright = "Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
-home = "Accueil"
-languageCode = "fr-fr"
-languageName = "Fr"
-weight = 2
+##################################### French Stuff ###################################
 #[[Languages.fr.menu.main]]
 #name = "sur"
 #pre = "#"
@@ -104,7 +98,7 @@ weight = 2
 author = "Themefisher"
 description = "Responsive Multipurpose Parallax Hugo Template"
 google_analytics_id = ""
-logo = "images/logo.png"
+logo = ""
 post_share = true
 [params.cookies]
 enable = false
