--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -135,7 +135,7 @@ link = "plugins/lazy-load/lozad.min.js"
 link = "plugins/google-map/map.js"
 [params.preloader]
 enable = false
-preloader = "images/logo.png"
+preloader = ""
 [[params.social]]
 icon = "ti-facebook"
 link = "#"
