--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -6,13 +6,13 @@ summaryLength = "15"
 theme = "meghna-hugo"
 themesDir = "../.."
 title = "Kiran"
-[Languages.en]
-contentDir = "content/english"
-copyright = "waCopyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
-home = "Home"
-languageCode = "en-us"
-languageName = "En"
-weight = 1
+#[Languages.en]
+#contentDir = "content/english"
+#copyright = "waCopyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Gethugothemes](https://gethugothemes.com)"
+#home = "Home"
+#languageCode = "en-us"
+#languageName = "En"
+#weight = 1
 [[Languages.en.menu.main]]
 name = "about"
 pre = "#"
