--- a/exampleSite/data/en/banner.yml
+++ b/exampleSite/data/en/banner.yml
@@ -1,8 +1,8 @@
 ############################### Banner ################################
 banner:
   enable : true
-  bg_image_webp : "images/backgrounds/hero-area.webp"
-  bg_image : "images/backgrounds/hero-area.png"
+  bg_image_webp : "images/backgrounds/bg-testimonial.webp"
+  bg_image : "images/backgrounds/bg-testimonial.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "Kiran Kokilepersaud"
   content : 
